@@ -11,7 +11,7 @@ public class C_MyLinkedListTest_Remove extends AbstractMyLinkedListTest {
 	@Test
 	public void remove1_Numbers1To5Added_ElementRemoved() {
 		addNumbersFromOneToFiveToList();
-		Integer number = new Integer(1);
+		Integer number = Integer.valueOf(1);
 		assertTrue(list.remove(number));
 		assertFalse(list.contains(number));
 		assertEquals(4, list.size());
@@ -21,7 +21,7 @@ public class C_MyLinkedListTest_Remove extends AbstractMyLinkedListTest {
 	@Test
 	public void remove5_Number1To5Added_ElementRemoved() {
 		addNumbersFromOneToFiveToList();
-		Integer number = new Integer(5);
+		Integer number = Integer.valueOf(5);
 		assertTrue(list.remove(number));
 		assertFalse(list.contains(number));
 		assertEquals(4, list.size());
@@ -31,7 +31,7 @@ public class C_MyLinkedListTest_Remove extends AbstractMyLinkedListTest {
 	@Test
 	public void remove3_Numbers1To5Added_ElementRemoved() {
 		addNumbersFromOneToFiveToList();
-		Integer number = new Integer(3);
+		Integer number = Integer.valueOf(3);
 		assertTrue(list.remove(number));
 		assertFalse(list.contains(number));
 		assertEquals(4, list.size());
@@ -41,13 +41,22 @@ public class C_MyLinkedListTest_Remove extends AbstractMyLinkedListTest {
 	@Test
 	public void remove10_Numbers1To5Added_NoCollectionChanges() {
 		addNumbersFromOneToFiveToList();
-		assertFalse(list.remove(new Integer(10)));
+		assertFalse(list.remove(Integer.valueOf(10)));
 		assertEquals(5, list.size());
 	}
 
 	@Test
 	public void remove10_EmptyList_NoCollectionChanges() {
-		assertFalse(list.remove(new Integer(10)));
+		assertFalse(list.remove(Integer.valueOf(10)));
+	}
+	
+	@Test
+	public void remove_WhenDuplicatesExist_OnlyOneElement(){
+		addNumbersFromOneToFiveToList();
+		Integer number = Integer.valueOf(2);
+		list.add(number);
+		assertTrue(list.remove(number));
+		checkOrderIndependentOccurrence(new Integer[]{1,3,4,5,2});
 	}
 
 }
